Updated to include system reboot on script 1 end

--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -70,7 +70,7 @@ bind-key -r H resize-pane -L 1
 bind-key -r L resize-pane -R 1 
 
 # enable mouse scrolling
-setw -g mode-mouse on
+setw -g mouse on
 
 # better pane split bindings with current path (tmux 1.9+)
 bind-key \ split-window -h -c "#{pane_current_path}"	# vertical split
