--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -174,6 +174,22 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
 
+# copy pasting from clipboard to tmux buffer
+#set -g mouse on
+# To copy:
+#bind-key -n -t vi-copy v copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+
+# To paste:
+#bind-key -n P run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+
+setw -g mode-keys vi
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+#set -g mouse on
 # EOF
 #
 # # exit the script if any statement returns a non-true return value
