added page up and page down key in tmux

--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -189,6 +189,9 @@ bind-key -t vi-copy 'y' copy-selection
 bind-key -t vi-copy 'r' rectangle-toggle
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
+#For page up and page down 
+bind -n Pageup copy-mode -u
+
 #set -g mouse on
 
 # THEME
