--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -183,10 +183,10 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
 setw -g mode-keys vi
 bind P paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
+bind -Tcopy-mode-vi r send -X rectangle-toggle
+bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
 
 #For page up and page down 
 bind -n Pageup copy-mode -u
