Added support for Ctrl+Backspace/Delete to zsh and changed default terminal colour-definition to 256-bit by default"
* Added support for deletion of word by Ctrl+Backspace/Delete
* Default terminal colour definition hardcoded to 256-bit in zsh. This ensures that zsh-autosuggestions's suggestions are not in the same colour as the text itself
* Added description of updated tmux shortcuts to `README.md`

--- a/config_files/tmux.conf
+++ b/config_files/tmux.conf
@@ -93,8 +93,8 @@ unbind n
 unbind p
 # bind -r C-h previous-window # select previous window
 # bind -r C-l next-window     # select next window
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+#bind -n S-Left  previous-window
+#bind -n S-Right next-window
 bind Tab last-window        # move to last active window
 
 # toggle mouse
