Added micro as default text editor and installation of bat
* Added `micro` and `bat` installation. `micro` is set with keybindings for similarity to modern IDEs, and `bat` is a handy alternative to `cat`
* Also switched screenrecorder to kazam
* Commented out installation of tor by default
* Removed installation of `Station`
* Updated setup instructions for secondary users in the README
* Updated `tmux` configuration so that PgUp within the tmux buffer is now triggered with `Ctrl+b PgUp`. This way, interference with `micro`'s operation is avoided'

--- a/config_files/tmux.conf
+++ b/config_files/tmux.conf
@@ -182,14 +182,14 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #bind-key -n P run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 setw -g mode-keys vi
-bind P paste-buffer
-bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-selection
-bind -Tcopy-mode-vi r send -X rectangle-toggle
-bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
+#bind P paste-buffer
+#bind -Tcopy-mode-vi v send -X begin-selection
+#bind -Tcopy-mode-vi y send -X copy-selection
+#bind -Tcopy-mode-vi r send -X rectangle-toggle
+#bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
 
 #For page up and page down 
-bind -n Pageup copy-mode -u
+#bind -n Pageup copy-mode -u
 
 #set -g mouse on
 
