--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,6 @@ before_install:
     - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
     - sudo apt-get update -qq
     - sudo apt-get install -y software-properties-common
-    - sudo apt-get install -qq build-essential curl g++ python-dev python3-dev python-setuptools python3-setuptools
+    - sudo apt-get install -qq build-essential curl g++ python3-dev python3-setuptools
     - echo 'America/Los_Angeles' | sudo tee /etc/timezone
     - sudo dpkg-reconfigure --frontend noninteractive tzdata
