--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ jobs:
     - name: bionic-ml
       dist: bionic
       python: 3.7
+    
+    - name: focal-ml
+      dist: focal
+      python: 3.7
 
   include:
     - name: xenial-basic
@@ -80,6 +84,44 @@ jobs:
 
     - name: bionic-opencv-conda
       dist: bionic
+      script:
+      - ./1-BasicSetUp.sh
+      - export PATH=/opt/anaconda3/bin:$PATH
+      - hash -r  # To reload env vars like PATH
+      - ./Build-OpenCV.sh
+      - ffmpeg -version
+      - gdb --ex='set confirm on' -ex=run -ex=bt -ex=quit --args python extras/opencv_test.py
+      python: 3.7
+    
+      - name: focal-basic
+      dist: focal
+      script:
+      - ./1-BasicSetUp.sh
+      - export PATH=/opt/anaconda3/bin:$PATH
+      - hash -r  # To reload env vars like PATH
+      - ./2-GenSoftware.sh
+      python: 3.7
+
+    - name: focal-opencv
+      dist: focal
+      script:
+      - ./Build-OpenCV.sh
+      - ffmpeg -version
+      - gdb --ex='set confirm on' -ex=run -ex=bt -ex=quit --args python3 extras/opencv_test.py
+      python: 3.7
+
+    - name: focal-ml
+      dist: focal
+      script: ./Build-ML.sh
+      python: 3.7
+
+    - name: focal-ml-basic
+      dist: focal
+      script: ./3-ML-Basic.sh
+      python: 3.7
+
+    - name: focal-opencv-conda
+      dist: focal
       script:
       - ./1-BasicSetUp.sh
       - export PATH=/opt/anaconda3/bin:$PATH
